--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "notiflix": "^3.2.6",
+    "photoswipe": "^5.3.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-loader-spinner": "^5.3.4",
+    "react-photoswipe-gallery": "^2.2.7",
     "react-scripts": "5.0.1",
+    "simplelightbox": "^2.13.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
